nys-95: ensure skip link never clipped when focussed

--- a/web/themes/custom/nysenate_theme/src/patterns/global/global.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/global/global.scss
@@ -838,3 +838,9 @@ section.print.hero--senator {
     display: none;
   }
 }
+
+// Esnure skip link never clipped when focussed.
+.skip-link.visually-hidden.focusable:focus {
+  z-index: 5000;
+  position: relative !important;
+}
